# orange-pi-zero-alpine

./: .gitignore  Makefile  README.md  configure  configure.ac  copy_sd.sh  notes.txt  write_sd.sh
.autoconf/: mb_check_progs.m4
builds/: README.md
builds/debug/: kernel.config
builds/debug/apks/armv7/: alpine-base-3.9.3-r0.apk  alpine-baselayout-3.2.0-r3.apk  alpine-keys-2.1-r2.apk  alpine-mirrors-3.5.10-r0.apk  apk-tools-2.10.3-r1.apk  apk-tools-2.10.4-r3.apk  bridge-1.5-r3.apk  busybox-1.29.3-r10.apk  busybox-1.31.1-r9.apk  busybox-suid-1.29.3-r10.apk  busybox-suid-1.31.1-r9.apk  ca-certificates-cacert-20191127-r0.apk  chrony-3.4-r1.apk  chrony-3.5-r1.apk  chrony-openrc-3.5-r1.apk  dbus-libs-1.10.24-r1.apk  e2fsprogs-1.44.5-r0.apk  e2fsprogs-1.45.5-r0.apk  e2fsprogs-libs-1.45.5-r0.apk  haveged-openrc-1.9.8-r0.apk  kbd-bkeymaps-2.0.4-r3.apk  libc-utils-0.7.1-r0.apk  libcom_err-1.44.5-r0.apk  libcrypto1.1-1.1.1b-r1.apk  libnl3-3.4.0-r0.apk  libnl3-3.5.0-r0.apk  libssl1.1-1.1.1b-r1.apk  libtls-standalone-2.7.4-r6.apk  musl-1.1.20-r4.apk  musl-utils-1.1.20-r4.apk  network-extras-1.2-r0.apk  openrc-0.42.1-r1.apk  openssh-8.1_p1-r0.apk  openssh-client-8.1_p1-r0.apk  openssh-keygen-7.9_p1-r4.apk  openssh-keygen-8.1_p1-r0.apk  openssh-server-7.9_p1-r4.apk  openssh-server-common-8.1_p1-r0.apk  openssh-sftp-server-7.9_p1-r4.apk  openssh-sftp-server-8.1_p1-r0.apk  (+22 more)
builds/debug/boot/: boot.cmd  boot.scr  initramfs-sunxi  modloop-sunxi  zImage
builds/debug/boot/dtbs/: sun8i-h2-plus-orangepi-zero.dtb  sun8i-h2-plus-orangepi-zero.dts
builds/default/: .config  kernel.config  uboot.config
builds/default/apks/armv7/: alpine-base-3.10.2-r0.apk  alpine-base-3.11.3-r0.apk  alpine-baselayout-3.1.0-r3.apk  alpine-baselayout-3.1.2-r0.apk  alpine-conf-3.8.1-r3.apk  alpine-conf-3.8.3-r0.apk  alpine-keys-2.1-r1.apk  alpine-keys-2.1-r2.apk  alpine-mirrors-3.5.10-r0.apk  apk-tools-2.10.4-r2.apk  bonding-2.6-r3.apk  bonding-2.6-r4.apk  bridge-1.5-r4.apk  busybox-1.30.1-r2.apk  busybox-initscripts-3.1-r6.apk  busybox-initscripts-3.1-r7.apk  busybox-initscripts-3.2-r2.apk  busybox-suid-1.30.1-r2.apk  ca-certificates-cacert-20190108-r0.apk  chrony-3.5-r0.apk  chrony-openrc-3.5-r0.apk  dbus-libs-1.12.16-r0.apk  e2fsprogs-1.45.2-r0.apk  e2fsprogs-libs-1.44.5-r0.apk  e2fsprogs-libs-1.45.2-r0.apk  haveged-1.9.4-r4.apk  haveged-openrc-1.9.4-r4.apk  kbd-bkeymaps-2.0.4-r3.apk  libblkid-2.33-r0.apk  libblkid-2.33.2-r0.apk  libc-utils-0.7.1-r0.apk  libc-utils-0.7.2-r0.apk  libcap-2.26-r0.apk  libcap-2.27-r0.apk  libcom_err-1.45.2-r0.apk  libcrypto1.1-1.1.1c-r0.apk  libcrypto1.1-1.1.1d-r3.apk  libedit-20181209.3.1-r0.apk  libedit-20190324.3.1-r0.apk  libedit-20191211.3.1-r0.apk  (+58 more)
builds/default/boot/: boot.cmd  boot.scr  bootEnv.txt  initramfs-sunxi  modloop-sunxi  zImage
builds/default/boot/dtbs/: sun8i-h2-plus-orangepi-zero.dts
builds/gps-ntp/: uboot.config
builds/gps-ntp/apks/armv7/: alpine-conf-3.8.3-r4.apk  bonding-2.6-r4.apk  bridge-1.5-r4.apk  dbus-libs-1.12.16-r2.apk  haveged-1.9.8-r0.apk  (+12 more)
builds/gps-ntp/boot/: boot.cmd  boot.scr  initramfs-sunxi  modloop-sunxi  zImage
configs/: README.md  boot.cmd  boot.no-modloop.cmd  bootEnv.gps-ntp.txt  kernel.add-xradio.patch  kernel.debug.config  kernel.default.config  kernel.gps-ntp.config  kernel.minimal.config  patch.kernel.debug.config  sun8i-h2-plus-orangepi-zero.dtb  sun8i-h2-plus-orangepi-zero.dts  u-boot.default.config
scripts/: copy_sd.sh  write_sd.sh
(+23 files in other folders)
